Merge BRANCHES/1.1 into TRUNK